# Program-Learning

./: .clang-format  .gitignore  Programing.code-workspace  README.md  Scripts.code-workspace  TODO.txt  auth.json  cpp.cpp  javascript.js  markdown.md  mission.json  package-lock.json  package.json  php.php  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  result.json  test.php  test.py  test1  tsconfig.json  tsconfig.node.json  新增加的插件与配置  驾驶.md
123/: 1.js
345/: 55.js
Adobe/CEP/: cep.config.ts  package.json  tsconfig-build.json  tsconfig.json  vite.config.ts  vite.es.config.ts
Adobe/Scripts/: 1.jsx  2  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig-ae.json  tsconfig-build.json  tsconfig.json  vite.config.ts  笔记
Adobe/myApp/: README.md  cep.config.ts  package.json  tsconfig-build.json  (+2 more)
Books/: 代码大全2.md  笔记.md
CPP/: #ifndef.md
JAVASCRIPT/: 1.js  2.js  55.js  Array.js
Javascript/: _guider.md
Linux/: 开机自启.txt
PowerShell/: UI.ps1
Python/: .gitignore  _python.md  image.py  test.py
Rust/: Cargo  main.rs  基础.md  教程.md
Sql/: data.db  mysql.md  一些概念.md  函数.py  数据表管理.sql  查询.py  类型.sql  表管理.py
_test/: test.js  test.php
_规范/: javascript函数可用版本.md  python 文件结构规范.md  其他.md  字体推荐.md  文件夹命名规则.md  设计规范.md
assets/: TODO.txt
css/: _less.less
html/: cite q blockquote figure.md  fieldset legend.md  required.md
power/: pk-jinja.html  pk.html
test/: 1.txt  test2.py  test_1.py
个人网站/: 1.json  v2  日语称谓.md
备忘录/: 一些ai网站.md
算法/: 技巧.md
规范/: javascript函数可用版本.md  python 文件结构规范.md  其他.md  设计规范.md
钢琴/: 和弦.md  琴谱扒取.py  琴谱网站.md
(+1457 files in other folders)
