[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
line-length = 118
ignore = 'E203'
target-version = ['py310']

include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 118
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["test"]
extra_standard_library = ["typing_extensions"]